2005-09-20 Magnus Hagdorn
 * glimmer_ncdf.f90: add end time to output structure
 * glimmer_ncio.f90: only write to output file if the current time is less
   than the max time
 * glimmer_ncparms.f90: read max time from config file

2005-09-23 Magnus Hagdorn
 * glide.f90: move configuration file parsing from glide_initialise to
   a new subroutine: glide_config
 * eis_glide.f90: add call to glide_config
 * glint_initialise.f90: ditto
 * simple_glide.f90: ditto
 * test_lithot.f90: ditto

2005-09-20 Magnus Hagdorn
 * glide_thck.f90: implement new ADI scheme
 * glide.f90: remove old velo calcs, hook-up new ADI scheme
 * glide_setup.f90: fix message to log
 * glide_types.f90: add some variables for ADI scheme
 * glimmer_utils.f90: add optional argument to tridag solver for specifying
   size of system
 * updated doc to include ADI stuff

2005-09-20 Magnus Hagdorn
 * glide_nc_custom.f90: fixed bug when lithoz is not used

2005-09-13 Magnus Hagdorn
 * glimmer_integrate.f90: fixed minor problem with NAG f95 v 4.2
 * glimmer_pdd.f90: ditto
 * glimmer_ncio.f90: fixed problem with comparing two floats on i386
   using NAG compiler (commited bug on GLIMMER head on 2005-08-12)

2005-09-12 Magnus Hagdorn
 * drivers.tex: update doc of EIS driver
 * glide_vars.def: fix units of lithoz variable
 * eis_glide.f90: use config file name for log file base name
 * simple_glide.f90: ditto

2005-09-05 Magnus Hagdorn
 * glide_lithot.f90: move 3D code to glide_lithot3d.f90 and provide wrapper
   functions to 1D and 3D solvers
 * glide_lithot1d.f90: solve thermal diffusion eqn in 1D
 * glide_lithot3d.f90: solve thermal diffusion eqn in 3D
 * Makefile.am: add new files
 * glide_types.f90: add variables for 1D solver and move some memory allocation
   to the initialisation of the 1D/3D solver
 * glide_setup.f90: select 1D/3D solver at run-time
 * glide_temp.f90: move tri-diagonal matrix solver to glimmer_utils.f90
 * glimmer_utils.f90: added tri-diagonal matrix solver
 * glide.tex: updated docs