@@ -90,10 +90,11 @@ $$ where $z^\ast$ is the vertical distance above the ELA. }\\
     \hline
     \multicolumn{2}{|l|}{\texttt{[EIS CONY]}}\\
     \hline
-    \multicolumn{2}{|p{0.98\textwidth}|}{The mass balance function can be modified with a continentality value. The continentality value is determined by finding the ratio between points below sea level and the total number of points in a circle of given search radius. This value between 0 and 1 is used to interpolate between continental and maritime mass balance curves.}\\
+    \multicolumn{2}{|p{0.98\textwidth}|}{The mass balance function can be modified with a continentality value. The continentality value is determined by finding the ratio between points below sea level and the total number of points in a circle of given search radius. This value between 0 (maritime) and 1 (continental) is used to interpolate between continental and maritime mass balance curves.}\\
     \hline
     \texttt{period} & how often continentality is updated (default 500a).\\
     \texttt{radius} & the search radius (default 600000m).\\
+    \texttt{file} & set to \textbf{1} to load continentality from file.\\ 
     \hline
 %%%% 
     \hline
