@@ -52,6 +52,7 @@ module eis_cony
   type eis_cony_type
      real :: period = 0.                          !*FD how often cony field should be updated, set to 0 to switch off
      real :: cony_radius = 600000                 !*FD continentality radius
+     integer :: update_from_file = 0              !*FD load cony from file
      real :: next_update                          !*FD when the next update occurs
      real,dimension(:,:),pointer :: cony => null()!*FD cony field
      real,dimension(:,:),pointer :: topo => null()!*FD topography mask
@@ -73,6 +74,10 @@ contains
        cony%period=500.
        call GetValue(section,'period',cony%period)
        call GetValue(section,'radius',cony%cony_radius)
+       call GetValue(section,'file',cony%update_from_file)
+       if (cony%update_from_file.eq.1) then
+          cony%period = 0
+       end if
     end if
   end subroutine eis_cony_config
 
@@ -89,6 +94,9 @@ contains
     call write_log(message)
     write(message,*) 'Continentality radius: ',cony%cony_radius
     call write_log(message)
+    if (cony%update_from_file.eq.1) then
+       call write_log(' Load continentality from input netCDF file')
+    end if
     call write_log('')
   end subroutine eis_cony_printconfig
 
